<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_lists"
    android:padding="10dp"
    tools:context=".Fragments.Fragment_Minhas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_de"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:labelFor="@+id/spinner_de"
                android:text="@string/de"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/spinner_de"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:entries="@array/cidades"
                android:hint="CIDADE ORIGEM"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/id_para"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/spinner_para"
                android:text="@string/para"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/spinner_para"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:entries="@array/cidades"
                android:hint="CIDADE DESTINO"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/edit_Data"
                android:text="@string/data"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" /> <!--Text Data-->

            <TextView
                android:id="@+id/text_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/edit_Hora"
                android:text="Hora:*"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_Data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/dd_mm"
                android:inputType="date"
                android:textAlignment="center"
                android:textSize="20sp" />

            <!--Text Hora-->

            <EditText
                android:id="@+id/edit_Hora"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:focusable="false"
                android:hint="@string/xx_xx"
                android:inputType="time"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/id_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/edit_coment"
            android:text="Informações Adicionais:"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_coment"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
            android:focusable="auto"
            android:gravity="start"
            android:hint="COMENTÁRIO"
            android:maxLength="150" />

        <Button
            android:id="@+id/bot_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="0"
            android:background="@drawable/button_gradient_blue"
            android:shadowColor="#A8A8A8"
            android:shadowRadius="5"
            android:text="@string/cadastrar"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>